created custom hooks

--- a/react-projects/cat-api/package.json
+++ b/react-projects/cat-api/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "standard && node my-tests.js"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "standard": "^17.1.0",
     "vite": "^5.0.8"
   },
