--- a/react-projects/cat-api/package.json
+++ b/react-projects/cat-api/package.json
@@ -10,6 +10,8 @@
     "test": "standard && node my-tests.js"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
+    "@types/node": "^20.10.7",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "standard": "^17.1.0",
