--- a/questions/react/01-sudoku/.gitignore
+++ b/questions/react/01-sudoku/.gitignore
@@ -24,3 +24,11 @@ dist-ssr
 *.sw?
 
 sudoku-api
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
