--- a/react-projects/mern-stack-proyect/backend/package.json
+++ b/react-projects/mern-stack-proyect/backend/package.json
@@ -13,6 +13,15 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-fns": "^3.3.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.2.0",
+    "mongoose-sequence": "^6.0.1",
+    "uuid": "^9.0.1"
   }
 }
