--- a/react-projects/redux-essentials-example-app-master/package.json
+++ b/react-projects/redux-essentials-example-app-master/package.json
@@ -6,6 +6,7 @@
     "@faker-js/faker": "^8",
     "@mswjs/data": "^0.16",
     "@reduxjs/toolkit": "^2",
+    "axios": "^1.6.7",
     "classnames": "^2.2.6",
     "date-fns": "^3.3.1",
     "mock-socket": "^9.0.3",
