--- a/react-project/games/.eslintrc.json
+++ b/react-project/games/.eslintrc.json
@@ -1,24 +1,41 @@
-import js from "@eslint/js";
-import globals from "globals";
-import reactHooks from "eslint-plugin-react-hooks";
-import reactRefresh from "eslint-plugin-react-refresh";
-import tseslint from "typescript-eslint";
-import { defineConfig, globalIgnores } from "eslint/config";
-
-export default defineConfig([
-  globalIgnores(["dist"]),
-  {
-    files: ["**/*.{ts,tsx}"],
-    extends: [
-      js.configs.recommended,
-      tseslint.configs.recommended,
-      reactHooks.configs["recommended-latest"],
-      reactRefresh.configs.vite,
-      prettier,
-    ],
-    languageOptions: {
-      ecmaVersion: 2020,
-      globals: globals.browser,
-    },
+{
+  "extends": ["eslint:recommended", "prettier"],
+  "plugins": [],
+  "parserOptions": {
+    "ecmaVersion": 2022,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
-]);
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true
+  }
+}
+
+// import js from "@eslint/js";
+// import globals from "globals";
+// import reactHooks from "eslint-plugin-react-hooks";
+// import reactRefresh from "eslint-plugin-react-refresh";
+// import tseslint from "typescript-eslint";
+// import { defineConfig, globalIgnores } from "eslint/config";
+
+// export default defineConfig([
+//   globalIgnores(["dist"]),
+//   {
+//     files: ["**/*.{ts,tsx}"],
+//     extends: [
+//       js.configs.recommended,
+//       tseslint.configs.recommended,
+//       reactHooks.configs["recommended-latest"],
+//       reactRefresh.configs.vite,
+//       prettier,
+//     ],
+//     languageOptions: {
+//       ecmaVersion: 2020,
+//       globals: globals.browser,
+//     },
+//   },
+// ]);
