--- a/react-project/games/.gitignore
+++ b/react-project/games/.gitignore
@@ -7,8 +7,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
+node_modules/
+dist/
+.env
+.DS_Store
+coverage/
+.vscode/
+
 dist-ssr
 *.local
 
