--- a/next-app/package.json
+++ b/next-app/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "test": "vitest"
   },
@@ -32,6 +32,7 @@
     "@types/react-dom": "^19.2.2",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "eslint-config-prettier": "^10.1.8",
     "happy-dom": "^20.0.10",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
