--- a/next-app/components.json
+++ b/next-app/components.json
@@ -5,8 +5,8 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "app/globals.css",
-    "baseColor": "slate",
+    "css": "src/app/globals.css",
+    "baseColor": "stone",
     "cssVariables": true,
     "prefix": ""
   },
